--- a/index.html
+++ b/index.html
@@ -4,34 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Página web de blog de café " >
+    <title>Blog de cafe</title>
+    <meta name="Description" content="Pagina web de blog de café">
+    <!-- Prefetch -->
+    <link rel="Prefetch" href="nosotros.html" as="document">
+   
+    <!-- Preload -->
+    <link rel="preload" href="/css/normalize.css" as="style">
+    <link rel="stylesheet" href="/css/normalize.css" />
+
+    <link rel="repload" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" 
+    crossorigin="crossorigin" as="font">
+     <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    /> 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <!--Prefetch-->
-    <link rel="Prefetch" href="nosotros.html" as="document">
-
-    <!-- cierre del Prefetch-->
-    
-    <!-- Preload -->
-    <link rel="Preload" href="/css/normalize.css" as="style">
-    <link rel="stylesheet" href="/css/normalize.css" />
-
-
-    <link rel="Preload" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" crossorigin="crossorigin" as="font">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="Preload" href="/css/style.css" as="style">
+    <link rel="preload" href="/css/style.css" as="style">
     <link rel="stylesheet" href="/css/style.css" />
 
 
-
-    <!-- cierre del preload-->
-
-    <title>Blog de cafe</title>
   </head>
   <body>
     <header class="header">
@@ -58,21 +52,20 @@
     </header>
     <div class="contenedor contenido-principal">
       <main class="blog">
-        <h3>Nuestro Blog</h3>
+        <h3>Nuestro blog</h3>
         <article class="entrada">
           <div class="entrada__imagen">
             <picture>
-              <source loading="lazy" srcset="/img/blog1.webp" type="image/webp" >
+              <source loading="lazy" srcset="/img/blog1.webp" type="image/webp">
               <img loading="lazy" src="/img/blog1.jpg" alt="imagen blog" />
             </picture>
           </div>
           <div class="entrada__contenido">
-            <h3 class="no-margin">Tipos de Grano de Café</h3>
+            <h4 class="no-margin">Tipos de granos de café</h4>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Accusantium totam aspernatur tempore vel porro libero debitis
-              aliquam illo sint ex assumenda esse praesentium, necessitatibus
-              illum aliquid, laborum, excepturi cupiditate deserunt.
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo
+              sapiente, quidem porro nemo totam alias illum nam eum, sint beatae
+              ex dicta a quasi voluptas? Voluptate id repudiandae modi vitae!
             </p>
             <a href="entrada.html" class="boton boton--primario"
               >Leer Entrada</a
@@ -82,17 +75,16 @@
         <article class="entrada">
           <div class="entrada__imagen">
             <picture>
-              <source loading="lazy" srcset="/img/blog2.webp" type="image/webp" >
+              <source loading="lazy" srcset="/img/blog2.webp" type="image/webp">
               <img loading="lazy" src="/img/blog2.jpg" alt="imagen blog" />
             </picture>
           </div>
           <div class="entrada__contenido">
-            <h3 class="no-margin">3 Deliciosas Recetas de Café</h3>
+            <h4 class="no-margin">3 deliciosas recetas de café</h4>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Accusantium totam aspernatur tempore vel porro libero debitis
-              aliquam illo sint ex assumenda esse praesentium, necessitatibus
-              illum aliquid, laborum, excepturi cupiditate deserunt.
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo
+              sapiente, quidem porro nemo totam alias illum nam eum, sint beatae
+              ex dicta a quasi voluptas? Voluptate id repudiandae modi vitae!
             </p>
             <a href="entrada.html" class="boton boton--primario"
               >Leer Entrada</a
@@ -102,17 +94,16 @@
         <article class="entrada">
           <div class="entrada__imagen">
             <picture>
-              <source loading="lazy" srcset="/img/blog3.webp" type="image/webp" >
+              <source loading="lazy" srcset="/img/blog3.webp" type="image/webp">
               <img loading="lazy" src="/img/blog3.jpg" alt="imagen blog" />
             </picture>
           </div>
           <div class="entrada__contenido">
-            <h3 class="no-margin">Beneficio del Café</h3>
+            <h4 class="no-margin">Beneficios de café</h4>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Accusantium totam aspernatur tempore vel porro libero debitis
-              aliquam illo sint ex assumenda esse praesentium, necessitatibus
-              illum aliquid, laborum, excepturi cupiditate deserunt.
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo
+              sapiente, quidem porro nemo totam alias illum nam eum, sint beatae
+              ex dicta a quasi voluptas? Voluptate id repudiandae modi vitae!
             </p>
             <a href="entrada.html" class="boton boton--primario"
               >Leer Entrada</a
@@ -121,31 +112,33 @@
         </article>
       </main>
       <aside class="sidebar">
-        <h2>Nuestros Cursos y Talleres</h2>
+        <h3>Nuestros cursos y talleres</h3>
         <ul class="cursos no-padding">
           <li class="widget-curso">
-            <h3 class="no-margin">Técnicas de Extracción de Café</h3>
+            <h4 class="no-margin">Técnicas de extracción de café</h4>
             <p class="widget-curso__label">
-              Precio: <span class="widget-curso__info">Gratis</span>
+              Precio:
+              <span class="widget-curso__info">Gratis</span>
             </p>
             <p class="widget-curso__label">
-              Cupo: <span class="widget-curso__info">20</span>
+              Cupo:
+              <span class="widget-curso__info">20</span>
             </p>
             <a href="entrada.html" class="boton boton--secundario"
-              >Más Información Sobre Nuestros Cursos</a
-            >
+              >Mas Información</a       
           </li>
-          <li class="widget-curso">
-            <h3 class="no-margin">4 Recetas de Café para principiantes</h3>
+           <li class="widget-curso">
+            <h4 class="no-margin">4 Recetas de café para principiantes</h4>
             <p class="widget-curso__label">
-              Precio: <span class="widget-curso__info">Gratis</span>
+              Precio:
+              <span class="widget-curso__info">Gratis</span>
             </p>
             <p class="widget-curso__label">
-              Cupo: <span class="widget-curso__info">20</span>
+              Cupo:
+              <span class="widget-curso__info">20</span>
             </p>
             <a href="entrada.html" class="boton boton--secundario"
-              >Más Información Sobre Nuestros Cursos</a
-            >
+              >Mas Información</a        
           </li>
         </ul>
       </aside>
@@ -163,7 +156,6 @@
             <a href="cursos.html" class="navegacion__enlace">Cursos</a>
             <a href="contacto.html" class="navegacion__enlace">Contacto</a>
           </nav>
-        </div>
         </div>
       </div>
     </footer>
