--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blog de cafe</title>
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,7 +13,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Blog de cafe</title>
   </head>
   <body>
     <header class="header">
@@ -40,23 +40,36 @@
     <main class="contenedor">
       <h3 class="centrar-texto">Contacto</h3>
       <div class="contacto-bg"></div>
+
       <form class="formulario">
         <div class="campo">
           <label class="campo__label" for="nombre">Nombre</label>
-          <input class="campo__field" type="text" placeholder="Tu Nombre" id="nombre">
+          <input
+            class="campo__field"
+            type="text"
+            placeholder="Tu Nombre"
+            id="nombre"
+          />
         </div>
         <div class="campo">
           <label class="campo__label" for="email">Email</label>
-          <input class="campo__field" type="email" placeholder="Tu Email" id="email">
+          <input
+            class="campo__field"
+            type="email"
+            placeholder="Tu Email"
+            id="email"
+          />
         </div>
         <div class="campo">
           <label class="campo__label" for="mensaje">Mensaje</label>
-          <textarea class="campo__field campo__field--textarea" id="mensaje"></textarea>
+          <textarea
+            class="campo__field campo__field--textarea"
+            id="mensaje"
+          ></textarea>
         </div>
         <div class="campo">
-          <input type="submit" value="Enviar" class="boton boton--primario">
+          <input type="submit" class="boton boton--primario" value="Enviar" />
         </div>
-        
       </form>
     </main>
     <footer class="footer">
@@ -73,9 +86,7 @@
             <a href="contacto.html" class="navegacion__enlace">Contacto</a>
           </nav>
         </div>
-        </div>
       </div>
     </footer>
-    <script src="/js/modernizr.js"></script>
   </body>
 </html>
