--- a/cursos.html
+++ b/cursos.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog de cafe</title>
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,6 +12,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css" />
+
+    <title>Document</title>
   </head>
   <body>
     <header class="header">
@@ -23,34 +24,33 @@
               Blog<span class="logo__bold">DeCafé</span>
             </h1>
           </a>
-          <nav class="navegacion">
-            <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
-            <a href="cursos.html" class="navegacion__enlace">Cursos</a>
-            <a href="contacto.html" class="navegacion__enlace">Contacto</a>
-          </nav>
+          <div class="navegacion">
+            <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+            <a class="navegacion__enlace" href="cursos.html">Cursos</a>
+            <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+          </div>
         </div>
       </div>
       <div class="header__texto">
-        <h2 class="no-margin">Blog de café con consejos y cursos</h2>
-        <p class="no-margin">
+        <h2 class="centrar-texto no-margin">
+          Blog de Café con consejos y cursos
+        </h2>
+        <p class="centrar-texto no-margin">
           Aprende de los expertos con las mejores recetas y consejos
         </p>
       </div>
     </header>
-    <main class="contenedor">
+    <div class="contenedor">
       <h3 class="centrar-texto">Nuestros proximos cursos</h3>
       <div class="curso">
-        <div class="curso__imagen">
-          <img src="/img/curso1.jpg" alt="Imagen del curso" />
-        </div>
-        <!-- cierre curso__imagen-->
-        <div class="curso__informacion">
-          <h4 class="no-margin">Técnicas de extraccion de café</h4>
+        <img class="curso__imagen" src="/img/curso1.jpg" alt="imagen curso" />
+        <div class="curso__contenido">
+          <h4 class="no-margin">Técnicas de extracción de café</h4>
           <p class="curso__label">
-            Precio: <span class="curso__info">Gratis</span>
+            Precio:<span class="curso__info">Gratis</span>
           </p>
-          <p class="-curso__label">Cupo: <span class="curso__info">20</span></p>
-          <p class="curso__descripcion">
+          <p class="curso__label">Cupo:<span class="curso__info">20</span></p>
+          <p class="curso__parrafo">
             of type and scrambled it to make a type specimen book. It has
             survived not only five centuries, but also the leap into electronic
             typesetting, remaining essentially unchanged. It was popularised in
@@ -59,21 +59,16 @@
             Aldus PageMaker including versions of Lorem Ipsum.
           </p>
         </div>
-        <!-- cierre curso__informacion-->
       </div>
-      <!-- cierre de .curso-->
       <div class="curso">
-        <div class="curso__imagen">
-          <img src="/img/curso2.jpg" alt="Imagen del curso" />
-        </div>
-        <!-- cierre curso__imagen-->
-        <div class="curso__informacion">
-          <h4 class="no-margin">Taller para Tostar y Moler Granos</h4>
+        <img class="curso__imagen" src="/img/curso2.jpg" alt="imagen curso" />
+        <div class="curso__contenido">
+          <h4 class="no-margin">Taller para Moler y Tostar Granos</h4>
           <p class="curso__label">
-            Precio: <span class="curso__info">Gratis</span>
+            Precio:<span class="curso__info">Gratis</span>
           </p>
-          <p class="-curso__label">Cupo: <span class="curso__info">20</span></p>
-          <p class="curso__descripcion">
+          <p class="curso__label">Cupo:<span class="curso__info">20</span></p>
+          <p class="curso__parrafo">
             of type and scrambled it to make a type specimen book. It has
             survived not only five centuries, but also the leap into electronic
             typesetting, remaining essentially unchanged. It was popularised in
@@ -82,21 +77,16 @@
             Aldus PageMaker including versions of Lorem Ipsum.
           </p>
         </div>
-        <!-- cierre curso__informacion-->
       </div>
-      <!-- cierre de .curso-->
       <div class="curso">
-        <div class="curso__imagen">
-          <img src="/img/curso3.jpg" alt="Imagen del curso" />
-        </div>
-        <!-- cierre curso__imagen-->
-        <div class="curso__informacion">
-          <h4 class="no-margin">4 Recetas de Café para Principiantes</h4>
+        <img class="curso__imagen" src="/img/curso3.jpg" alt="imagen curso" />
+        <div class="curso__contenido">
+          <h4 class="no-margin">4 Recetas de cafe para principiantes</h4>
           <p class="curso__label">
-            Precio: <span class="curso__info">Gratis</span>
+            Precio:<span class="curso__info">Gratis</span>
           </p>
-          <p class="-curso__label">Cupo: <span class="curso__info">20</span></p>
-          <p class="curso__descripcion">
+          <p class="curso__label">Cupo:<span class="curso__info">20</span></p>
+          <p class="curso__parrafo">
             of type and scrambled it to make a type specimen book. It has
             survived not only five centuries, but also the leap into electronic
             typesetting, remaining essentially unchanged. It was popularised in
@@ -105,10 +95,8 @@
             Aldus PageMaker including versions of Lorem Ipsum.
           </p>
         </div>
-        <!-- cierre curso__informacion-->
       </div>
-      <!-- cierre de .curso-->
-    </main>
+    </div>
     <footer class="footer">
       <div class="contenedor">
         <div class="barra">
@@ -117,11 +105,11 @@
               Blog<span class="logo__bold">DeCafé</span>
             </h1>
           </a>
-          <nav class="navegacion">
-            <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
-            <a href="cursos.html" class="navegacion__enlace">Cursos</a>
-            <a href="contacto.html" class="navegacion__enlace">Contacto</a>
-          </nav>
+          <div class="navegacion">
+            <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+            <a class="navegacion__enlace" href="cursos.html">Cursos</a>
+            <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+          </div>
         </div>
       </div>
     </footer>
