--- a/index.html
+++ b/index.html
@@ -4,28 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog de cafe</title>
-    <meta name="Description" content="Pagina web de blog de café">
-    <!-- Prefetch -->
-    <link rel="Prefetch" href="nosotros.html" as="document">
-   
-    <!-- Preload -->
-    <link rel="preload" href="/css/normalize.css" as="style">
     <link rel="stylesheet" href="/css/normalize.css" />
-
-    <link rel="repload" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" 
-    crossorigin="crossorigin" as="font">
-     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
-      rel="stylesheet"
-    /> 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-    <link rel="preload" href="/css/style.css" as="style">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/style.css" />
 
-
+    <title>Document</title>
   </head>
   <body>
     <header class="header">
@@ -36,111 +24,118 @@
               Blog<span class="logo__bold">DeCafé</span>
             </h1>
           </a>
-          <nav class="navegacion">
-            <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
-            <a href="cursos.html" class="navegacion__enlace">Cursos</a>
-            <a href="contacto.html" class="navegacion__enlace">Contacto</a>
-          </nav>
+          <div class="navegacion">
+            <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+            <a class="navegacion__enlace" href="cursos.html">Cursos</a>
+            <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+          </div>
         </div>
       </div>
       <div class="header__texto">
-        <h2 class="no-margin">Blog de café con consejos y cursos</h2>
-        <p class="no-margin">
+        <h2 class="centrar-texto no-margin">
+          Blog de Café con consejos y cursos
+        </h2>
+        <p class="centrar-texto no-margin">
           Aprende de los expertos con las mejores recetas y consejos
         </p>
       </div>
     </header>
     <div class="contenedor contenido-principal">
-      <main class="blog">
+      <main>
         <h3>Nuestro blog</h3>
         <article class="entrada">
           <div class="entrada__imagen">
-            <picture>
-              <source loading="lazy" srcset="/img/blog1.webp" type="image/webp">
-              <img loading="lazy" src="/img/blog1.jpg" alt="imagen blog" />
-            </picture>
+            <img src="/img/blog1.jpg" alt="" />
           </div>
           <div class="entrada__contenido">
             <h4 class="no-margin">Tipos de granos de café</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo
-              sapiente, quidem porro nemo totam alias illum nam eum, sint beatae
-              ex dicta a quasi voluptas? Voluptate id repudiandae modi vitae!
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Delectus, autem perspiciatis! Omnis quas, repudiandae optio
+              voluptatibus corporis inventore laborum nesciunt dolor, cum
+              aliquid deserunt enim, perferendis eaque ipsam officiis
+              exercitationem?
             </p>
-            <a href="entrada.html" class="boton boton--primario"
-              >Leer Entrada</a
+            <a class="boton boton--primario" href="entrada.html"
+              >Leer entrada</a
             >
           </div>
         </article>
         <article class="entrada">
           <div class="entrada__imagen">
-            <picture>
-              <source loading="lazy" srcset="/img/blog2.webp" type="image/webp">
-              <img loading="lazy" src="/img/blog2.jpg" alt="imagen blog" />
-            </picture>
+            <img src="/img/blog2.jpg" alt="" />
           </div>
           <div class="entrada__contenido">
-            <h4 class="no-margin">3 deliciosas recetas de café</h4>
+            <h4>3 Deliciosas recetas de cafe</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo
-              sapiente, quidem porro nemo totam alias illum nam eum, sint beatae
-              ex dicta a quasi voluptas? Voluptate id repudiandae modi vitae!
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Delectus, autem perspiciatis! Omnis quas, repudiandae optio
+              voluptatibus corporis inventore laborum nesciunt dolor, cum
+              aliquid deserunt enim, perferendis eaque ipsam officiis
+              exercitationem?
             </p>
-            <a href="entrada.html" class="boton boton--primario"
-              >Leer Entrada</a
+            <a class="boton boton--primario" href="entrada.html"
+              >Leer entrada</a
             >
           </div>
         </article>
         <article class="entrada">
           <div class="entrada__imagen">
-            <picture>
-              <source loading="lazy" srcset="/img/blog3.webp" type="image/webp">
-              <img loading="lazy" src="/img/blog3.jpg" alt="imagen blog" />
-            </picture>
+            <img src="/img/blog3.jpg" alt="" />
           </div>
           <div class="entrada__contenido">
-            <h4 class="no-margin">Beneficios de café</h4>
+            <h4 class="no-margin">Beneficios del café</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo
-              sapiente, quidem porro nemo totam alias illum nam eum, sint beatae
-              ex dicta a quasi voluptas? Voluptate id repudiandae modi vitae!
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Delectus, autem perspiciatis! Omnis quas, repudiandae optio
+              voluptatibus corporis inventore laborum nesciunt dolor, cum
+              aliquid deserunt enim, perferendis eaque ipsam officiis
+              exercitationem?
             </p>
-            <a href="entrada.html" class="boton boton--primario"
-              >Leer Entrada</a
+            <a class="boton boton--primario" href="entrada.html"
+              >Leer entrada</a
             >
           </div>
         </article>
       </main>
       <aside class="sidebar">
         <h3>Nuestros cursos y talleres</h3>
-        <ul class="cursos no-padding">
-          <li class="widget-curso">
-            <h4 class="no-margin">Técnicas de extracción de café</h4>
-            <p class="widget-curso__label">
-              Precio:
-              <span class="widget-curso__info">Gratis</span>
-            </p>
-            <p class="widget-curso__label">
-              Cupo:
-              <span class="widget-curso__info">20</span>
-            </p>
-            <a href="entrada.html" class="boton boton--secundario"
-              >Mas Información</a       
-          </li>
-           <li class="widget-curso">
-            <h4 class="no-margin">4 Recetas de café para principiantes</h4>
-            <p class="widget-curso__label">
-              Precio:
-              <span class="widget-curso__info">Gratis</span>
-            </p>
-            <p class="widget-curso__label">
-              Cupo:
-              <span class="widget-curso__info">20</span>
-            </p>
-            <a href="entrada.html" class="boton boton--secundario"
-              >Mas Información</a        
-          </li>
-        </ul>
+        <li class="widget-curso">
+          <h4 class="no-margin">Tecnicas de extracción de café</h4>
+          <p class="widget-curso__label">
+            Precio:<span class="widget-curso__info">Gratis</span>
+          </p>
+          <p class="widget-curso__label">
+            Cupo:<span class="widget-curso__info">20</span>
+          </p>
+          <a class="boton boton--secundario" href="entrada.html"
+            >Mas informacion</a
+          >
+        </li>
+        <li class="widget-curso">
+          <h4 class="no-margin">4 Recetas de café para principiantes</h4>
+          <p class="widget-curso__label">
+            Precio:<span class="widget-curso__info">Gratis</span>
+          </p>
+          <p class="widget-curso__label">
+            Cupo:<span class="widget-curso__info">20</span>
+          </p>
+          <a class="boton boton--secundario" href="entrada.html"
+            >Mas informacion</a
+          >
+        </li>
+        <li class="widget-curso">
+          <h4 class="no-margin">Tecnicas para moler café</h4>
+          <p class="widget-curso__label">
+            Precio:<span class="widget-curso__info">Gratis</span>
+          </p>
+          <p class="widget-curso__label">
+            Cupo:<span class="widget-curso__info">20</span>
+          </p>
+          <a class="boton boton--secundario" href="entrada.html"
+            >Mas informacion</a
+          >
+        </li>
       </aside>
     </div>
     <footer class="footer">
@@ -151,14 +146,13 @@
               Blog<span class="logo__bold">DeCafé</span>
             </h1>
           </a>
-          <nav class="navegacion">
-            <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
-            <a href="cursos.html" class="navegacion__enlace">Cursos</a>
-            <a href="contacto.html" class="navegacion__enlace">Contacto</a>
-          </nav>
+          <div class="navegacion">
+            <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+            <a class="navegacion__enlace" href="cursos.html">Cursos</a>
+            <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+          </div>
         </div>
       </div>
     </footer>
-    <script src="/js/modernizr.js"></script>
   </body>
 </html>
