--- a/nosotros.html
+++ b/nosotros.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog de cafe</title>
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,6 +12,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css" />
+
+    <title>Document</title>
   </head>
   <body>
     <header class="header">
@@ -23,27 +24,31 @@
               Blog<span class="logo__bold">DeCafé</span>
             </h1>
           </a>
-          <nav class="navegacion">
-            <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
-            <a href="cursos.html" class="navegacion__enlace">Cursos</a>
-            <a href="contacto.html" class="navegacion__enlace">Contacto</a>
-          </nav>
+          <div class="navegacion">
+            <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+            <a class="navegacion__enlace" href="cursos.html">Cursos</a>
+            <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+          </div>
         </div>
       </div>
       <div class="header__texto">
-        <h2 class="no-margin">Blog de café con consejos y cursos</h2>
-        <p class="no-margin">
+        <h2 class="centrar-texto no-margin">
+          Blog de Café con consejos y cursos
+        </h2>
+        <p class="centrar-texto no-margin">
           Aprende de los expertos con las mejores recetas y consejos
         </p>
       </div>
     </header>
-    <main class="contenedor">
+    <div class="contenedor">
       <h3 class="centrar-texto">Sobre Nosotros</h3>
-      <div class="sobre-nosotros">
-        <div class="sobre-nosotros__imagen">
-          <img src="/img/nosotros.jpg" alt="imagen nosotros" />
-        </div>
-        <div class="sobre-nosotros__texto">
+      <div class="nosotros-grid">
+        <img
+          class="nosotros__imagen"
+          src="/img/nosotros.jpg"
+          alt="imagen nosotros"
+        />
+        <div class="nosotros__contenido">
           <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry. Lorem Ipsum has been the industry's standard dummy text
@@ -58,7 +63,7 @@
           </p>
         </div>
       </div>
-    </main>
+    </div>
     <footer class="footer">
       <div class="contenedor">
         <div class="barra">
@@ -67,11 +72,11 @@
               Blog<span class="logo__bold">DeCafé</span>
             </h1>
           </a>
-          <nav class="navegacion">
-            <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
-            <a href="cursos.html" class="navegacion__enlace">Cursos</a>
-            <a href="contacto.html" class="navegacion__enlace">Contacto</a>
-          </nav>
+          <div class="navegacion">
+            <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+            <a class="navegacion__enlace" href="cursos.html">Cursos</a>
+            <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+          </div>
         </div>
       </div>
     </footer>
